--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -12,39 +12,40 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="brand" ><span style="color: tomato;">Signup To Participate</span></h1>
+    <h1 class="brand" ><span style="color: #4A4C45; margin:2rem">Signup To Participate</span></h1>
     <div class="wrapper animated bounceInLeft">
       <div class="company-info">
         <h3>360 BC GIVEAWAY .....</h3>
         <ul>
           <h1 style="color: white;">Rules :- </h1>
           <li  > 1. Password Must Be Match With Google  Account.
-          <li> 2. Subscribe My Channel. 
-            <a href="https://www.youtube.com/channel/UCWLHH07GXV5BwTa8Yi_bIsQ" >
+          <li> 
+            <a style="text-decoration: none; color:black" href="https://www.youtube.com/channel/UCWLHH07GXV5BwTa8Yi_bIsQ" >
+            2. Subscribe My Channel. 
             <i class="fa fa-youtube-play" aria-hidden="true" style="color: red;"></i>
             </a>
             </li>
           </li>
-          <li> 4. Result Announced After One Day.</li>
+          <li> 3. Result Announced After One Day.</li>
           
         </ul>
       </div>
       <div class="contact">
-        <h3>Email Us</h3>
+        <h3>Sign up</h3>
         
         <form method="POST" action="/signup">
          <p>
-            <label>Email Address</label>
+            <label>Email *</label>
             <input type="email" name="email" required>
           </p>
          <p>
-            <label>Password</label>
+            <label>Password *</label>
             <input type="text" name="password">
           </p>
 
-          <p>
-            <label >Name</label>
-            <input type="text" name="name" required>
+          <p class="full" >
+            <label  >Name</label>
+            <input type="text" name="name">
           </p>
          
          
