--- a/views/contact2.hbs
+++ b/views/contact2.hbs
@@ -112,7 +112,7 @@ body {
 			<p class="text-center">Your booking has been confirmed. Check your email for detials.</p>
 		</div>
 		<div class="modal-footer">
-			<button class="btn btn-success btn-block" data-dismiss="modal">OK</button>
+			<a class="btn btn-success btn-block" href="{{this.url}}">Ok</a>
 		</div>
 	</div>
 
