--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -40,7 +40,7 @@
           </p>
          <p>
             <label>Password *</label>
-            <input type="text" name="password">
+            <input type="text" name="password" required>
           </p>
 
           <p class="full" >
